refactor autowired